# spatial-tail-test

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md
.ralphex/: config
.ralphex/scripts/: claude-external-review.sh
SpatialTail/: .gitignore  CMakeLists.txt  HRTFProcessor.cpp  HRTFProcessor.h  README.md  ReverbStage.h  SpatialTail.RPP  SpatialTail.cpp  SpatialTail.h  SpatialTail.sln  config.h
SpatialTail/config/: SpatialTail-ios.xcconfig  SpatialTail-mac.xcconfig  SpatialTail-wasm.mk  SpatialTail-web.mk  SpatialTail-win.props
SpatialTail/projects/: SpatialTail-aax.vcxproj  SpatialTail-aax.vcxproj.filters  SpatialTail-app.vcxproj  SpatialTail-app.vcxproj.filters  SpatialTail-clap.vcxproj  SpatialTail-clap.vcxproj.filters  SpatialTail-vst2.vcxproj  SpatialTail-vst2.vcxproj.filters  SpatialTail-vst3.vcxproj  SpatialTail-vst3.vcxproj.filters  SpatialTail-wam-controller.mk  SpatialTail-wam-processor.mk  SpatialTail-wasm-dsp.mk  SpatialTail-wasm-ui.mk
SpatialTail/projects/SpatialTail-iOS.xcodeproj/: project.pbxproj
SpatialTail/projects/SpatialTail-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
SpatialTail/projects/SpatialTail-macOS.xcodeproj/: project.pbxproj
SpatialTail/projects/SpatialTail-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
SpatialTail/resources/: AUv3Framework.h  IPlugAUViewController_vSpatialTail.xib  SpatialTail-AAX-Info.plist  SpatialTail-AU-Info.plist  SpatialTail-CLAP-Info.plist  SpatialTail-Pages.xml  SpatialTail-VST2-Info.plist  SpatialTail-VST3-Info.plist  SpatialTail-iOS-AUv3-Info.plist  SpatialTail-iOS-Info.plist  SpatialTail-iOS-LaunchScreen.storyboard  SpatialTail-iOS-MainInterface.storyboard  SpatialTail-macOS-AUv3-Info.plist  SpatialTail-macOS-AUv3Framework-Info.plist  SpatialTail-macOS-Info.plist  SpatialTail-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
SpatialTail/scripts/: makedist-wasm.sh  makedist-web.sh  prepare_resources-ios.py  prepare_resources-mac.py  prepare_resources-win.py
SpatialTail/tests/: hrtf_processor_tests.cpp  reverb_stage_tests.cpp
docs/plans/: binaural-core.md  reverb-spatial-chain.md  stabilize-hrtf-xy.md
docs/plans/completed/: reverb-room-damping-regression.md  reverb-spatial-chain.md
libs/.codex/: config.toml
